kubernetes/apps/registry/zot/app/service-tailscale.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zot-tailscale
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "zot"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: zot
    app.kubernetes.io/name: zot
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
